--- a/8_1_25.html
+++ b/8_1_25.html
@@ -2,8 +2,8 @@
     img {
         width:200px;
         height:200px;
-        border: 5px red solid;
-        border-radius:105px;
+        border: 5px white solid;
+        border-radius: 50%;
     }
 </style>
 <img src="image/profile.jpg">
