--- a/7_1_1.html
+++ b/7_1_1.html
@@ -1,12 +1,8 @@
 <html>
-    <head></head>
+    <head>
+        <link href="style.css" rel="stylesheet">
+    </head>
 	<body>
-        <style>
-            .highlight{
-                border:solid;
-                border-color:red;
-            }
-        </style>
         <div>
             <img src="https://www.instagram.com/static/images/web/mobile_nav_type_logo.png/735145cfe0a4.png"/>
             <input type="search" value="검색"/>
