--- a/7_4_1.html
+++ b/7_4_1.html
@@ -3,6 +3,6 @@
     #myID {color:red;}
     .myClass {color: green; border-color:violet}
 </style>
-<p class="myClass" id="myID">
+<p class="myClass" id="myID" style="color: black;">
     어떤 결과가 나올까요?
 </p>
